mise en place du design des toutes les pages sans interaction javascript

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Божье Слово верно"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HSjyjhL1xnHSugUqA5c9cpOI3lboGY+t8VCmaQQ+TMI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
